add ring tick mark type

--- a/tickseekbar/src/main/res/values/attr.xml
+++ b/tickseekbar/src/main/res/values/attr.xml
@@ -43,6 +43,7 @@
             <enum name="square" value="2" />
             <enum name="divider" value="3" /> <!--show tickMarks shape as vertical line , line'size is 1 dp.-->
             <enum name="custom" value="4" />
+            <enum name="ring" value="5" />
         </attr>
         //tickTexts
         <attr name="tsb_show_tick_texts"><!--select the tick shape type, default rectangle/1-->
