--- a/sample/src/main/res/layout/custom.xml
+++ b/sample/src/main/res/layout/custom.xml
@@ -94,6 +94,29 @@
             app:tsb_thumb_size="18dp"
             app:tsb_ticks_count="6" />
 
+        <TextView
+            style="@style/subtitle_text_style"
+            android:text="7. thumbAutoAdjust = false" />
+
+        <com.warkiz.tickseekbar.TickSeekBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tsb_seek_smoothly="true"
+            app:tsb_show_tick_marks_type="ring"
+            app:tsb_show_tick_texts="below"
+            app:tsb_show_thumb_text="above"
+            app:tsb_tick_marks_size="16dp"
+            app:tsb_tick_marks_color="#ffffff"
+            app:tsb_track_background_size="1dp"
+            app:tsb_track_progress_size="1dp"
+            app:tsb_track_background_color="#dddddd"
+            app:tsb_track_progress_color="#dddddd"
+            app:tsb_thumb_drawable="@drawable/ic_pause_circle"
+            app:tsb_thumb_color="#8c181b"
+            app:tsb_thumb_size="20dp"
+            app:tsb_thumb_adjust_auto="false"
+            app:tsb_ticks_count="5" />
+
         <include layout="@layout/source_code_link" />
 
     </LinearLayout>
